--- a/GestionCommercial-Android/app/src/main/res/values/strings.xml
+++ b/GestionCommercial-Android/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Gestion Commercial</string>
-    <string name="title_activity_signup">Gestion Commercial</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
+    <string name="title_activity_subscribe_client">Nouveau Client</string>
     <string-array  name="civilite_array">
         <item>Mr</item>
         <item>Mme</item>
